--- a/src/pages/building-details/building-details.scss
+++ b/src/pages/building-details/building-details.scss
@@ -12,7 +12,11 @@ page-item-details {
 .percentage {
     font-size: 27px;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 10px;
   margin-bottom: 20px;
 
+}
+
+.chart-canvas{
+  margin-bottom: 20px;
 }
