--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,12 +24,26 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+  primary:    #3cadf4,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
 );
+
+.md .toolbar-background {
+  background-color: #3cadf4 !important;
+}
+.md .toolbar-title{
+  color:white !important;
+}
+
+.md .bar-buttons{
+  color:white !important;
+}
+.md .bar-button{
+  color:white !important;
+}
 
 
 // App iOS Variables
