--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,6 +7,9 @@
 .debug-output{
   display:none;
 }
+.main-btn {
+  width: 100%;
+}
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
