--- a/src/components/favorite-button/favorite-button.html
+++ b/src/components/favorite-button/favorite-button.html
@@ -1,4 +1,4 @@
-<button ion-button style="width:100%;" small clear outline (click)="onFavorite()" color="primary"
+<button class= "main-btn" ion-button small clear outline (click)="onFavorite()" color="primary"
   icon-left>
   <ion-icon [name]="favorited ?  'star' : 'star-outline'"></ion-icon>
   Favorit
