--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -4,6 +4,10 @@ h1{
   margin-bottom:20px !important;
 }
 
+button {
+  margin-top:20px;
+}
+
 .headline{
   margin-top:20px;
   margin-bottom:20px;
